# peer-review-pax

./: .env.example  .gitignore  CLAUDE.md  README.md  Strategy_Drift_Block_Inc.pptx  readme  requirements.txt
.claude/: settings.json
.claude/hooks/: README.md  langfuse_subagent_trace.py  langfuse_trace.py  langfuse_utils.py
archive/: PLAN.md
archive/docs/: PRESENTATION-INSTRUCTIONS.md  valuation-driver-methodology.html  (+1 more)
docs/: FILESYSTEM.md  drift-scoring-framework.md  onboarding.html  pax-first-valuation-driver-methodology.md  pax-peer-assessment-framework.md  pax-peer-strategy-ontology.md  peer-comparison-methodology.md  sigma-final-report-guide.md  strategy-drift-methodology.md  valuation-driver-methodology.html  valuation-driver-methodology.md  vda-consulting-evidence-hierarchy.md  vda-correlation-classification.md
prompts/: 00_source_mapping.md  01_gather_actions.md  01_gather_commitments.md  01_gather_strategy.md  02_map_pillars.md  03_map_actions.md  04_coherence_analysis.md  05_final_report.md
src/: document_converter.py  llm_client.py
src/tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/tauri/src-tauri/capabilities/: default.json
src/tauri/src-tauri/icons/: icon.icns
src/tauri/src-tauri/src/: lib.rs  main.rs
tests/: test_claim_indexer.py  test_consulting_context.py  test_crawl_vda_dataset.py  test_crawlee_vda.py  test_data_gaps.py  test_delta_spec.py  test_langfuse_hooks.py  test_llm_client_tracing.py  test_metric_checklist.py  test_pax_session_source_inventory.py  test_report_validator.py  test_source_catalog.py  test_vda_contracts.py
(+1708 files in other folders)
